# pattern_recognition_engine

./: .env  .gitignore  README.md  __init__.py  check_imports.py  config.py  main.py  pyproject.toml  requirements.txt  run.py  run_project.py  start.py  test_data.csv  test_simple.py
config/: config_development.yaml  config_production.yaml  config_testing.yaml
core/: __init__.py  backtesting.py  data_feeder.py  ml_models.py  pattern_analyzer.py  pattern_database.py  pattern_detector.py  statistics.py
gui/: __init__.py  main_window.py
mt5_client/: mt5_export_script01.mq5
patterns/: __init__.py  base_pattern.py  candlestick_patterns.py  geometric_patterns.py  harmonic_patterns.py
server/: __init__.py  ws_server.py
tests/: __init__.py  check_imports.py  full_test.py  patterns.db  quick_test.py  simple_test.py  simple_test_fixed.py  test_config.py  test_data.csv  test_data.py  test_historical_data.csv  test_minimal.py  test_patterns.py  test_simple_server.py  test_without_mt5.py
utils/: __init__.py  helpers.py  logger.py  mt5_connector.py  visualization.py
