[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-recognition-engine"
version = "1.0.0"
description = "Professional Pattern Recognition Engine for financial markets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pattern Recognition Team", email = "support@pattern-recognition.com"}
]
keywords = ["trading", "pattern-recognition", "technical-analysis", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "plotly>=5.3.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "websockets>=10.0",
    "python-socketio>=5.0.0",
    "SQLAlchemy>=1.4.0",
    "alembic>=1.7.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.0.0",
    "prometheus-client>=0.12.0",
    "structlog>=21.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.5",
    "email-validator>=1.1.0",
    "pydantic>=1.8.0",
    "numba>=0.54.0",
    "ta-lib>=0.4.0; sys_platform != 'win32'",
    "TA-Lib>=0.4.24; sys_platform == 'win32'",
    "MetaTrader5>=5.0.0",
    "joblib>=1.1.0",
    "tqdm>=4.62.0",
    "colorlog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "pre-commit>=2.0",
    "ipython>=7.0",
    "jupyter>=1.0",
]
ml = [
    "tensorflow>=2.6.0",
    "torch>=1.9.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]
monitoring = [
    "grafana-client>=2.0.0",
    "influxdb-client>=1.30.0",
    "elasticsearch>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/DiamondDim/pattern_recognition_engine"
Documentation = "https://pattern-recognition-engine.readthedocs.io"
Repository = "https://github.com/DiamondDim/pattern_recognition_engine"
Issues = "https://github.com/DiamondDim/pattern_recognition_engine/issues"

[project.scripts]
pre-engine = "main:main"
pre-api = "server.api_server:main"
pre-backtest = "core.backtesting:run_backtest_cli"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pattern_recognition_engine --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

